# scrapping

./: .dockerignore  .gitignore  README.md  app_articles_scraper.py  app_console.py  app_url_parser.py  pyproject.toml  requirements-dev.txt  requirements.txt
.run/: console.run.xml
classes/: arguments.py  config.py  singleton.py
data/: scrape_24heures_2024-04-14_17-28-36.json  scrape_24heures_2024-04-14_21-34-51.json  scrape_24heures_2024-04-14_21-38-33.json  scrape_24heures_2024-04-14_21-38-44.json  scrape_breakinglatest_2024-04-14_17-29-14.json  scrape_breakinglatest_2024-04-14_17-29-16.json  scrape_breakinglatest_2024-04-14_21-34-57.json  scrape_breakinglatest_2024-04-14_21-35-01.json  scrape_chiswickcalendar_2024-04-14_17-29-20.json  scrape_chiswickcalendar_2024-04-14_21-35-22.json  scrape_chiswickcalendar_2024-04-14_21-39-12.json  scrape_chiswickcalendar_2024-04-14_21-39-17.json  scrape_corriere_2024-04-14_17-30-06.json  scrape_corriere_2024-04-14_17-30-17.json  scrape_corriere_2024-04-14_21-39-32.json  scrape_corriere_2024-04-14_21-39-43.json  scrape_inews_2024-04-14_17-58-28.json  scrape_inews_2024-04-14_21-40-34.json  scrape_rtbf_2024-04-14_17-57-04.json  scrape_rtbf_2024-04-14_18-01-16.json  scrape_rtbf_2024-04-14_21-41-17.json  scrape_rtp_2024-04-14_17-56-59.json  scrape_rtp_2024-04-14_17-59-06.json  scrape_rtp_2024-04-14_18-01-11.json  scrape_rtp_2024-04-14_18-05-19.json  scrape_rtp_2024-04-14_21-41-11.json  scrape_svt_2024-04-14_17-56-37.json  scrape_svt_2024-04-14_17-58-44.json  scrape_svt_2024-04-14_18-00-53.json  scrape_svt_2024-04-14_21-40-50.json
(+5 files in other folders)
